# dot

./: .editorconfig  .gitignore  Makefile  README.md  setup
alacritty/: alacritty.toml  alacritty.yml  pass-alacritty-config.toml  pass-alacritty-config.yml  setup
bash/: .bashrc  .dircolors  .infokey  .inputrc  setup
doc/: ansible.md  dots-inspo.md  fedora-dev-station.md  fedora.md  firefox.md  gnupg.md  linux-dev-setup.md  neovim.md  sway.md  todo.md  ykman.md  zathura.md
docker/: completion  setup
gh/: config.yml  setup
git/: config  setup
gnupg/: gpg.conf  setup
gopass/: config  setup
home/: .bashrc  .dircolors  .inputrc  .tmux.conf  .vimrc
home/templates/python/: .gitignore  README.md  pyproject.toml
install/: install-age  install-age-plugin-yubikey  install-arduino-lint  install-croc  install-d2  install-fastfetch  install-gh  install-glow  install-go  install-keg  install-markdownfmt  install-miller  install-most-stuff-with-dnf  install-typos  install-typst  install-typstyle  install-vhdl_ls  install-vsg  install-wormhole-william  install-yq  install-zig  install-zls
karabiner/: setup
lynx/: README.md  setup
mods/: mods.yml  setup
newsboat/: config  setup  urls
nvim/: README.md  init.lua
pandoc/: highlight.theme  setup
podman/: completion  setup
scripts/: 255color  aln  athena  cht  cht.new  cmt  convertcurrency  ddd  devd  duck  eject2  feep  figid  figname  fmttable  gpt  gptcurl  gptimg  kildecurl  kildeliste  lh  localserver  lynx  lynxa  lynxar  map  marg  md  nopath  open  pae  passmenu  pdf  pie  preview  pyserver  scripts  (+23 more)
(+146 files in other folders)
